Fix data attribute presentation on small screen

--- a/code/styles/base/_typography.scss
+++ b/code/styles/base/_typography.scss
@@ -46,6 +46,7 @@ h3 {
     size: $base-h3-size;
     weight: 400;
   }
+  line-height: 1.6;
 }
 
 h4 {
